# rabbitmq-comm

./: .gitignore  README.md  docker-compose.yml
recieverPython/: Dockerfile
recieverPython/app/: reciever.py  requirements.txt
senderC/: Dockerfile  Dockerfile.base
senderC/app/: CMakeLists.txt  amqp_producer.c  image_sender.c  sender.cpp
